--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>sharpfog - sharpfog.com</title>
+    <title>sharpfog projects - sharpfog.com</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
@@ -51,14 +51,13 @@
     <div class="main-container">
       <div class="main wrapper clearfix">
 
-        <article>
-    <header>
-        <h1>Hello World!</h1>
-        <p>I like writing code. Probably too much. Check out my <a href="/blog">blog</a> or <a href="http://github.com/sharpfog">github</a> and you'll see some of the things I'm interested in. I'm working on putting more of my stuff on the world wide intertubes, so this page will probably be subject to endless tweaking. Please watch your step. Thanks for stopping by.</p>
-        
-        <p>PS, I'm always looking for interesting new projects. Drop a line to <strong>me at sharpfog.com</strong> if you want to get in touch. Thanks!</p>
-    </header>
-</article>
+        <h1>Personal Projects</h1> 
+<p>Here are some of the projects I've worked on/are working on.</p>
+<ul>
+  <li><a href="http://github.com/sharpfog/done">Done</a> - recursive file system helpers for Node.js</li>
+  <li><a href="http://github.com/sharpfog/crispy">Crispy</a> - a static site generator for Node.js</li> 
+</ul>
+
 
 
       </div>
