--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,8 @@
 <h1>Personal Projects</h1> 
 <p>Here are some of the projects I've worked on/are working on.</p>
 <ul>
-  <li><a href="http://github.com/sharpfog/done">Done</a> - recursive file system helpers for Node.js</li>
+  <li><a href="http://github.com/sharpfog/connect-oembed">connect-oEmbed</a> - simple <a href="http://www.oembed.com/">oEmbed</a> provider middleware for Node.js Connect and Express</li> 
   <li><a href="http://github.com/sharpfog/crispy">Crispy</a> - a static site generator for Node.js</li> 
+  <li><a href="http://github.com/sharpfog/done">Done</a> - recursive file system helpers for Node.js</li>
 </ul>
 
