cleaned up some wording

--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@
 ---
 
 <h1>Personal Projects</h1> 
-<p>Here are some of the projects I've worked on/are working on.</p>
+<p>Here are some of the projects I've worked on.</p>
 <ul>
   <li><a href="http://github.com/sharpfog/connect-oembed">connect-oEmbed</a> - simple <a href="http://www.oembed.com/">oEmbed</a> provider middleware for Node.js Connect and Express</li> 
   <li><a href="http://github.com/sharpfog/crispy">Crispy</a> - a static site generator for Node.js</li> 
